--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="rgb(35, 35, 35)">
     <meta name="author" content="RICHEZ Simon - Ysah">
-    <meta name="description" content="Free Software for Note Taking">
     <title>Darkness Note</title>
-    <link rel="icon" href="rsc/main.svg">
-    <link rel="apple-touch-icon" href="rsc/main.svg">
-    <link rel="manifest" href="manifest.json">
+    <link rel="icon" href="rsc/svg/main.svg">
+    <link rel="apple-touch-icon" href="rsc/svg/main.svg">
   </head>
   <body>
-    <script src="load.js"></script>
+    <script src="app.js"></script>
+    <script src="app_load.js"></script>
   </body>
 </html>
