--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="rsc/svg/main.svg">
     <link rel="apple-touch-icon" href="rsc/svg/main.svg">
   </head>
-  <body>
+  <body style="background-color: rgb(45, 45, 45)">
     <script src="app.js"></script>
     <script src="app_load.js"></script>
   </body>
