--- a/index.html
+++ b/index.html
@@ -1,15 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="rgb(35, 35, 35)">
     <meta name="author" content="RICHEZ Simon - Ysah">
     <title>Darkness Note</title>
-    <link rel="icon" href="rsc/svg/main.svg">
-    <link rel="apple-touch-icon" href="rsc/svg/main.svg">
+    <link rel="icon" href="rsc/png/main.png">
+    <link rel="apple-touch-icon" href="rsc/png/main_apple_touch.png">
+    <style>
+      body{
+        background-color: rgb(45, 45, 45)
+      }
+      body, h1, ol, p{
+        margin: 0;
+      }
+      input, ol{
+        padding: 0;
+      }
+      h1{
+        font-weight: normal;
+      }
+      ol{
+        list-style: none;
+      }
+      a{
+        text-decoration: none;
+      }
+      input{
+        background: none;
+        border: none;
+        outline: none;
+      }
+      textarea{
+        background: none;
+        border: none;
+        outline: none;
+        resize: none;
+      }
+      select{
+        background: none;
+        border: none;
+        outline: none;
+      }
+      option{
+        background: inherit;
+      }
+    </style>
   </head>
-  <body style="background-color: rgb(45, 45, 45)">
+  <body>
     <script src="app.js"></script>
     <script src="app_load.js"></script>
   </body>
