--- a/index.html
+++ b/index.html
@@ -6,47 +6,9 @@
     <meta name="theme-color" content="rgb(35, 35, 35)">
     <meta name="author" content="RICHEZ Simon - Ysah">
     <title>Darkness Note</title>
-    <link rel="icon" href="rsc/png/main.png">
-    <link rel="apple-touch-icon" href="rsc/png/main_apple_touch.png">
-    <style>
-      body{
-        background-color: rgb(45, 45, 45)
-      }
-      body, h1, ol, p{
-        margin: 0;
-      }
-      input, ol{
-        padding: 0;
-      }
-      h1{
-        font-weight: normal;
-      }
-      ol{
-        list-style: none;
-      }
-      a{
-        text-decoration: none;
-      }
-      input{
-        background: none;
-        border: none;
-        outline: none;
-      }
-      textarea{
-        background: none;
-        border: none;
-        outline: none;
-        resize: none;
-      }
-      select{
-        background: none;
-        border: none;
-        outline: none;
-      }
-      option{
-        background: inherit;
-      }
-    </style>
+    <link rel="icon" href="rsc/img/main.png">
+    <link rel="apple-touch-icon" href="rsc/img/main.png">
+    <link rel="stylesheet" href="css/reset.css">
   </head>
   <body>
     <script src="app.js"></script>
