--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="rgb(35, 35, 35)">
     <meta name="author" content="RICHEZ Simon - Ysah">
     <title>Darkness Note</title>
+    <style>body{background-color: rgb(45, 45, 45)}</style>
     <link rel="icon" href="rsc/img/main.png">
     <link rel="apple-touch-icon" href="rsc/img/main.png">
     <link rel="stylesheet" href="css/reset.css">
